--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /trabajo en clase/nbproject/private/
 /trabajo en clase/build/
+/Trabajo_extraclase_2/nbproject/private/
+/Trabajo_extraclase_2/build/
+/Trabajoextraclase1/nbproject/private/
+/Trabajoextraclase1/build/
