--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Trabajoextraclase1/nbproject/private/
 /Trabajoextraclase1/build/
 /quizsebas/target/
+/Clase 6/nbproject/private/
+/Clase 6/build/
+/EjercicioClase6/nbproject/private/
+/EjercicioClase6/build/
